add a longer header

--- a/05/index.html
+++ b/05/index.html
@@ -5,7 +5,7 @@
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
   </head>
   <body>
-    <h3 class='title'>D3 Stacked Bar Chart Showing Generated Data</h3>
+    <h3 class='title'>D3 Stacked Bar Chart Showing Generated Data Loaded from a JSON File</h3>
     <div class='controls'>
       <div class='dropdown' id='datasets-dropdown'>  
         <div class='dropdown-button'>Please Select</div>
