add listener that updates data from dropdown menu.  hooray

--- a/05/index.html
+++ b/05/index.html
@@ -11,9 +11,9 @@
         <div class='dropdown-button'>Please Select</div>
           <span class='triangle'>&#9660;</span>
           <ul class='dropdown-selection'>
-            <li>Dataset One</li>
-            <li>Dataset Two</li>
-            <li>Dataset Three</li>
+            <li id='dataset-zero'>Dataset Zero</li>
+            <li id='dataset-one'>Dataset One</li>
+            <li id='dataset-two'>Dataset Two</li>
           </ul>
         </div> 
       </div>
