set default button label to 0th dataset

--- a/05/index.html
+++ b/05/index.html
@@ -8,7 +8,7 @@
     <h3 class='title'>D3 Stacked Bar Chart Showing Generated Data Loaded from a JSON File</h3>
     <div class='controls'>
       <div class='dropdown' id='datasets-dropdown'>  
-        <div class='dropdown-button'>Please Select</div>
+        <div class='dropdown-button'>Dataset Zero</div>
           <span class='triangle'>&#9660;</span>
           <ul class='dropdown-selection'>
             <li id='dataset-zero'>Dataset Zero</li>
